--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ markers =
     smoke: mark test as smoke test
     acceptance: mark test as acceptance test
     functional: mark test as functional test
+    end_to_end: mark test as end-to-end test
